--- a/全栈/安全.md
+++ b/全栈/安全.md
@@ -254,49 +254,72 @@ CREATE TABLE ids_increment (
     - 可设置白名单 URL，域名，仅加载 https
     - 通过 token 或 hash 限制内联脚本等
 - 预防数据包嗅探、中间人攻击和 HTTP 劫持
+  - 通过 CSP 设置信任的资源的来源，必须使用 https 协议
+    - HTTP 超文本传输协议位于 OSI 模型的第 7 层，传输以纯文本形式进行
+    - HTTP 数据包可以被嗅探，容易遭受中间人攻击
+    - HTTPS 流量经过加密
+      - 即使嗅探到数据包或者以其他方式截取数据包
+      - 它们也会呈现为无意义的字符
+- 数据注入攻击
+  - 通过 CSP 设置信任的资源的来源
+    - 当数据注入发生后，阻止浏览器加载非法来源的数据
 
-通过 CSP 设置信任的资源的来源，必须使用 https 协议
-HTTP 超文本传输协议位于 OSI 模型的第 7 层，传输以纯文本形式进行
-HTTP 数据包可以被嗅探，容易遭受中间人攻击
-HTTPS 流量经过加密
-即使嗅探到数据包或者以其他方式截取数据包
-它们也会呈现为无意义的字符
-数据注入攻击
+如何配置内容安全策略（CSP）？
 
-通过 CSP 设置信任的资源的来源
-当数据注入发生后，阻止浏览器加载非法来源的数据
-（2）如何配置内容安全策略（CSP）？
-策略 policy 可以配置在响应头 Content-Security-Policy
-
-策略 policy 可以配置在 meta 标签 http-equiv="Content-Security-Policy"
-
-策略类型
-
-default-src 默认策略，没有配置后面的策略时，采用的策略，必须
-img-src 图片策略
-media-src 多媒体策略
-script-src 脚本策略
-style-src 样式策略
-font-src 字体策略
-object-src 插件策略
-child-src 框架
-connect-src HTTP 连接策略
-workder-src Worker 脚本策略
-manifest-src Manifest 策略
-prefetch-src 预加载或预渲染策略
-策略值
-
-self 同源策略，关键字，用引号包裹
-none 禁止加载任何外部资源，关键字，用引号包裹
-域名，泛域名（支持 * 通配符），网址（含协议头 http:// 或 https:// )，路径名，协议名
-report-uri + 网址，向指定 URL 发送违例报告
-调试时，可以将策略 policy 配置到 Content-Security-Policy-Report-Only 响应头，只报告不应用策略
-script-src 关键字，用引号包裹
-nsafe-inline 允许 `<script>` 标签和事件监听函数
-unsafe-eval 允许将字符串作代码执行，包含使用 eval Function setTimeout setInterval 函数
-nonce-{token} 允许 `<script nonce={token}></script>` 中代码执行
-{hash} 允许 `<script>` 中的 {hash} 值相符的代码执行
+- 策略 policy 可以配置在响应头 `Content-Security-Policy`
+- 策略 policy 可以配置在 meta 标签`http-equiv="Content-Security-Policy"`
+- 策略类型
+  - default-src 默认策略，没有配置后面的策略时，采用的策略，必须
+  - img-src 图片策略
+  - media-src 多媒体策略
+  - script-src 脚本策略
+  - style-src 样式策略
+  - font-src 字体策略
+  - object-src 插件策略
+  - child-src 框架
+  - connect-src HTTP 连接策略
+  - workder-src Worker 脚本策略
+  - manifest-src Manifest 策略
+  - prefetch-src 预加载或预渲染策略
+- 策略值
+  - self 同源策略，关键字，用引号包裹
+  - none 禁止加载任何外部资源，关键字，用引号包裹
+  - 域名，泛域名（支持 * 通配符），网址（含协议头 http:// 或 https:// )，路径名，协议名
+  - report-uri + 网址，向指定 URL 发送违例报告
+    - 调试时，可以将策略 policy 配置到 Content-Security-Policy-Report-Only 响应头，只报告不应用策略
+  - script-src 关键字，用引号包裹
+    - nsafe-inline 允许 `<script>` 标签和事件监听函数
+    - unsafe-eval 允许将字符串作代码执行，包含使用 eval Function setTimeout setInterval 函数
+    - nonce-{token} 允许 `<script nonce={token}></script>` 中代码执行
+  - {hash} 允许 `<script>` 中的 {hash} 值相符的代码执行
 
 ## 什么是 XSS ，如何防范 XSS ？
+
+### 定义
+
+通过 Web 开发留下的漏洞注入恶意代码，使用户加载并执行攻击者恶意制造的程序，与 Web 开发相关的 JavaScript，Java，VBScript，ActiveX，Flash 或 HTML 都可能被注入
+
+攻击成功后，攻击者将得到更高权限、私密网页内容、会话和 Cookie
+
+### 分类
+
+- DOM-based型
+  - 范围：客户端
+  - 攻击方式：DOM设置属性来自Location或者Document接口或者Socket接口等其他客户端传递Message的途径，未经过滤和转义，包含 JavaScript 脚本的恶意代码通过 URL 或 Referer 传入，被意外执行，轻则影响用户体验，客户端崩溃，重则用户数据被发送，身份被冒充用于滥发消息、投票、转账等进而引发社会工程学相关安全问题
+  - 传递路径：Location或者Document接口或者Socket接口等其他客户端传递Message的途径->客户端
+  - 传播方式：构造特殊URL或从特定或伪造来源发起请求，诱导用户点击或者访问，一次性攻击
+- 反射型/非持久型
+  - 范围：客户端+服务端
+  - 定义：设置属性或内容来自后端，未经过滤和转义，包含 JavaScript 脚本的恶意代码通过 URL 或 Referer 传入，被意外执行，轻则影响用户体验，客户端崩溃，重则用户数据被发送，身份被冒充用于滥发消息、投票、转账等进而引发社会工程学相关安全问题
+  - 传递路径：Location 或 Document 接口 或 Socket 接口等其它客户端传递 Message 的途径 → 服务端 → 客户端
+  - 备注：与 DOM-based 的区别在于不需要服务端参与，服务端将恶意内容反射回客户端，即反射型攻击的命名来源
+  - 传播方式：构造特殊 URL 或从特定或伪造来源发起请求，诱导用户访问或点击，一次性攻击
+- 存储型/持久型
+  - 范围：客户端 + 服务端
+  - 攻击方式：设置属性或内容来自数据库或 Web 或 Extension 存储或 Cookie 中，未经过滤和转义，包含 JavaScript 脚本的恶意代码通过 URL 或 Referer 以及用户主动提交等方式传入，并被存入数据库或 Web 或 Extension 存储或 Cookie 中，读取后，被意外执行，轻则影响用户体验，客户端崩溃，重则用户数据被发送，身份被冒充用于滥发消息、投票、转账等进而引发社会工程学相关安全问题
+  - 传递路径：Location 或 Document 接口 或 Socket 接口等其它客户端传递 Message 的途径和用户主动提交 → 服务端 → 数据库 → 客户端 → 客户端
+  - 传播方式：寻找过滤和转义缺乏或不完善的提交及展示路径，将恶意 JavaScript 脚本代码经过处理，提交到存储引擎，攻击者通过读取存储引擎的展示路径，持久攻击
+
+### 防御
 
 ## 什么是 CSRF ，如何防范 CSRF
